# joman-dictionary

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  development.md  docker-compose.override.yml  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  go.mod  go.sum  pyproject.toml  sqlc.yaml
backend/app/: crud.py  models.py
backend/app/api/: main.py
backend/app/core/: config.py
backend/app/tests/: conftest.py  test_crud.py
backend/cmd/api/: main.go
backend/cmd/seed/: main.go
backend/cmd/sentences/: main.go
backend/db/: create-db.sql  create-schema.sql  initial-seed.sql  queries.sql  schema-diagram.pgerd  test-queries.sql
backend/internal/api/: handlers.go  handlers_test.go
backend/internal/csv/: csv.go  csv_test.go
backend/internal/db/: db.go  db_test.go
backend/internal/repository/: models.go  querier.go  queries.sql  queries.sql.go  sqlc-queries.sql  sqlc-queries.sql.go
backend/internal/verb/: verb.go  verb_test.go
backend/joman/: main.py
backend/src/: main.py
frontend/: Dockerfile  Dockerfile.playwright  README.md  package-lock.json  tsconfig.node.json
sentences/: Body-Sentences.csv  Expressions.csv  Feeling-Phrases.csv  Greeting-Phrases.csv  Greetings.csv  Walking-In-Rain.txt
src/db/db/: preferences.json
src/db/db/scripts/: create-db.sql
src/db/pgadmin/: schema-diagram.pgerd
words/: Adjectives.csv  Adverbs.csv  Animals.csv  Body.csv  Business.csv  Clothing.csv  Cognition.csv  Colors.csv  Conjunctions.csv  Family.csv  Feelings.csv  Food.csv  House.csv  Knowledge.csv  Marriage.csv  Misc.csv  Nature.csv  Numbers.csv  People.csv  Places.csv  Possessives.csv  Prepositions.csv  Pronouns.csv  Questions.csv  ReflexiveVerbs.csv  Relationships.csv  Religion.csv  Suffixes.csv  Taste.csv  Thinking.csv  Time.csv  TimeAdverbs.csv  Travel.csv  Trees.csv  Verbs.csv
